Fixed width and alignment of login modal

--- a/app/assets/stylesheets/internal/mast_desktop.css.scss
+++ b/app/assets/stylesheets/internal/mast_desktop.css.scss
@@ -262,6 +262,10 @@ body.explores {
 }
 
 #login_modal {
+  width: 30%;
+  left: 35%;
+  margin-left: 0;
+
   font-size: 14px;
   color: $text-color;
 
